# tfc

./: .buckconfig  .gitignore  BUCK  CMakeLists.txt  Colors.h  TFC Structure.txt  To-Do.txt  main.cpp  test.tfc
doc/: TFC Journal Structure.txt  TFC Structure.txt
include/: License.h  OldTask.h  Record.h  TagTable.h  Task.h  Tasker.h  Terminal.h  TfcFile.h  TfcFileException.h  endian.h
include/libtfc/: BlobTable.h  Journal.h  Record.h  TagTable.h  TfcFile.h  TfcFileException.h
jni/: Android.mk  Application.mk  extensions.cpp
lib/xxhash/: CMakeLists.txt
lib/xxhash/cmake_unofficial/: CMakeLists.txt
lib/xxhash/src/: xxhash.c
libtfc/: BlobTable.cpp  BlobTable.h  JumpTable.cpp  JumpTable.h  Record.cpp  Record.h  TagTable.cpp  TagTable.h  TfcFile.cpp  TfcFile.h
libtfc/src/: exception.cpp  file.cpp  journal.cpp  record.cpp  table.cpp
src/: BlobTable.cpp  OldTask.cpp  Record.cpp  TagTable.cpp  Task.cpp  TfcFile.cpp  TfcFileException.cpp  main.cpp
src/libtfc/: BlobTable.cpp  Journal.cpp  Record.cpp  TagTable.cpp  TfcFile.cpp  TfcFileException.cpp
src/tasker/: Event.cpp  Looper.cpp  Task.cpp  TaskException.cpp  TaskHandle.cpp
tasker/: CMakeLists.txt
tasker/src/: event.cpp  loop.cpp  task.cpp  task_exception.cpp  task_handle.cpp
tfc/: CMakeLists.txt
tfc-cli/: CMakeLists.txt
tfc-cli/include/: license.h
tfc-cli/src/: main.cpp
tfc/src/: container.cpp  exception.cpp  file.cpp  journal.cpp  main.cpp  record.cpp  table.cpp
tfc/src/engine/: engine.cpp  scribe.cpp
tfc/tfc/: container.h  exception.h  file.h  record.h  table.h
tfc/tfc/engine/: engine.h  scribe.h
